# XtalComp

./: CMakeLists.txt  README  test.cpp  xcmatrix.h  xctransform.h  xtalcomp.cpp  xtalcomp.h
cgi/: xtalcomp-cgi.cpp  xtalcomp.html  xtalcompcounter.cgi
spglib/: CMakeLists.txt
